<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.delta.plugins</groupId>
	<artifactId>deltaplugin</artifactId>
	<version>1.0</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<repositories>

        <repository>
            <id>matteodev</id>
            <url>https://maven.devs.beer/</url>
        </repository>
		<!-- This adds the Spigot Maven repository to the build -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>fren_gor</id>
			<url>https://nexus.frengor.com/repository/public/</url>
		</repository>
        <repository>
            <id>nexus</id>
            <name>Lumine Public</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>Maven Central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

    </repositories>

	<dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
		<!--This adds the Spigot API artifact to the build -->

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.elmakers.mine.bukkit</groupId>
            <artifactId>EffectLib</artifactId>
            <version>10.10</version>
            <scope>compile</scope>
        </dependency>

        <!--<dependency>
            <groupId>net.minecraft</groupId>
            <artifactId>spigot</artifactId>
            <version>1</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\versions\1.21.10\paper-1.21.10.jar</systemPath>
        </dependency>-->
        <dependency>
            <groupId>dev.jorel</groupId>
            <artifactId>commandapi-paper-shade</artifactId>
            <version>11.0.0</version>
            <scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>io.github.toxicity188</groupId>
            <artifactId>bettermodel</artifactId>
            <version>2.0.0</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins\BetterModel-3.2.0-paper.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.rschao.plugins.techniqueapi</groupId>
            <artifactId>TechniqueAPI</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins\TechniqueAPI-1.0.jar</systemPath>
        </dependency>
		<dependency>
            <groupId>com.rschao</groupId>
            <artifactId>bossfight</artifactId>
            <version>3.0</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins\bossfight-3.0.jar</systemPath>
		</dependency>
        <dependency>
            <groupId>net.kryspin</groupId>
            <artifactId>proflight2</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins\proflight-1.0.jar</systemPath>
        </dependency>

		<dependency>
			<groupId>com.frengor</groupId>
			<artifactId>ultimateadvancementapi</artifactId>
			<version>2.4.0</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>com.rschao.plugins.showdowncore</groupId>
            <artifactId>showdowncore</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins\showdowncore-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.rschao.plugins.fightingpp</groupId>
            <artifactId>fightingplusplus</artifactId>
            <version>1.21-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins\fightingplusplus-1.21-SNAPSHOT.jar</systemPath>
        </dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-jar-plugin</artifactId>
                  <version>2.3.1</version>
                  <configuration>
                    <outputDirectory>D:\Users\RSChao\Desktop\Programas para PC\paper-upgrade\plugins</outputDirectory>
                  </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <minimizeJar>false</minimizeJar>
                        <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                        <relocations>
                            <!-- Other relocations can go here, e.g. bstats -->
                            <relocation>
                                <pattern>de.slikey</pattern>
                                <shadedPattern>my.own.plugin.namespace.slikey</shadedPattern>
                            </relocation>
                        </relocations>
                        <filters>
                            <filter>
                                <artifact>com.elmakers.mine.bukkit:EffectLib</artifact>
                                <excludes>
                                    <exclude>plugin.yml</exclude>
                                    <exclude>META-INF/MANIFEST.MF</exclude>
                                </excludes>
                            </filter>
                        </filters>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
